syntax = "proto3";

option go_package = "/pb";

package orderbook;

service OrderInfoService {
    rpc GetOrderInfo(OrderInfoRequest) returns (OrderInfoReply) {}
}

enum EnumSide {
    BUY = 0;
    SELL = 1;
}
message OrderInfoRequest {
    uint64 id = 1;
}

message OrderInfoReply {
    Order order = 1;
}

message Order {
    uint64 id = 1;
    double Price = 2;
    double Quantity = 3;
    EnumSide Side = 4;
    uint32 Timestamp = 5;
    string OwnerUsername = 6;
    string created_at = 7;  // ISO8601 format timestamp
    string updated_at = 8;  // ISO8601 format timestamp
}

// Greeting
service GreetingService {
    rpc Greeting(GreetingServiceRequest) returns (GreetingServiceReply) {}
}

message GreetingServiceRequest {
    string name = 1;
}

message GreetingServiceReply {
    string message = 2;
}